# stock_analysis

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
runtime/: docker-compose.yml
stock_analysis/: __init__.py  cli.py  constants.py  default_settings.py  schemas.py
stock_analysis/alerts/: notifiers.py  watchdogs.py
stock_analysis/backtest/: feeds.py  strategies.py
stock_analysis/backtest/strategies/: ao.py  debug.py
stock_analysis/datasources/: base.py  utils.py
stock_analysis/datasources/easyquotation/: client.py  persistence.py
stock_analysis/datasources/futuapi/: client.py  context.py  handlers.py  persistence.py  schemas.py
stock_analysis/datasources/joinquant/: client.py  hdf5.py  persistence.py  utils.py
stock_analysis/storage/influxdb/: databases.py
stock_analysis/storage/sqlalchemy/: databases.py  models.py
stock_analysis/utils/: basic.py  daemon.py  encrypt.py  timeit.py
